# SeeDraft

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md  build.rs  tauri.conf.json
docs/: CHANGELOG.md  foundry-local-v1.1-design.md  improvements.md  ui-redesign.md
docs/api/: endpoints.md  index.md  postprocess-pipeline.md  system-audio-capture.md
docs/database/: tables.md
docs/legal/: privacy-policy.md
docs/screen/: Main.md  index.md
src/: desktop.rs  main.rs  settings.rs  storage.rs  system_audio.rs  views.rs
src/locales/: en.json  ja.json
src/ui/: hold_overlay.html  index.html
